TFP-4978: Tatt i bruk fp-bom parent pom